--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -4,11 +4,22 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiApp1"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:localization="clr-namespace:MauiApp1.Extensions"
+    Shell.FlyoutBehavior="Flyout">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar x:Name="MainTabBar">
+        <Tab Title="{localization:Translate AboutPage}"
+            
+             AutomationId="MainPage_AboutTab">
+            <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+        </Tab>
+        <Tab Title="{localization:Translate MainPage}"
+            
+             AutomationId="MainPage_BrowseTab">
+            <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+        </Tab>
+    </TabBar>
+    <MenuFlyoutItem Text="{localization:Translate AboutPage}"/>
+    <MenuFlyoutItem Text="{localization:Translate MainPage}"/>
 
 </Shell>
