--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:res="clr-namespace:MauiApp1.Resources"
-             x:Class="MauiApp1.MainPage">
+             x:Class="MauiApp1.MainPage"
+             Title="Main Page">
 
     <ScrollView>
         <VerticalStackLayout
@@ -34,6 +35,13 @@
                 Text="Click me"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
+                HorizontalOptions="Center" />
+
+            <Button
+                x:Name="LanguageBtn"
+                Text="ChangeLanguage"
+                SemanticProperties.Hint="Counts the number of times you click"
+                Clicked="onLanguageClicked"
                 HorizontalOptions="Center" />
 
         </VerticalStackLayout>
